build2.txt
cargo :     Checking omnilang v1.2.2 (D:\GitHub\OmniLang)
At line:1 char:1
+ cargo check --target wasm32-unknown-unknown --lib 2>&1 | 
Out-File -Fi ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking om... 
   itHub\OmniLang):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0308]: mismatched types
   --> src\wasm_bindings.rs:8:32
    |
  8 |     let mut lexer = Lexer::new(source.to_string());
    |                     ---------- ^^^^^^^^^^^^^^^^^^ 
expected `&str`, found `String`
    |                     |
    |                     arguments to this function are 
incorrect
    |
note: associated function defined here
   --> src\lexer.rs:101:12
    |
101 |     pub fn new(input: &str) -> Self {
    |            ^^^ -----------
help: try removing the method call
    |
  8 -     let mut lexer = Lexer::new(source.to_string());
  8 +     let mut lexer = Lexer::new(source);
    |

error[E0599]: no method named `parse` found for struct `Parser` 
in the current scope
  --> src\wasm_bindings.rs:12:26
   |
12 |             match parser.parse() {
   |                          ^^^^^ method not found in `Parser`
   |
  ::: src\parser.rs:4:1
   |
 4 | pub struct Parser {
   | ----------------- method `parse` not found for this struct
   |
   = help: items from traits can only be used if the trait is 
implemented and in scope
   = note: the following trait defines an item `parse`, perhaps 
you need to implement it:
           candidate #1: `parsing::parsable::sealed::Sealed`

warning: unused variable: `start_time`
   --> src\program_evaluator.rs:676:25
    |
676 |                     let start_time = 
std::time::Instant::now();
    |                         ^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: `_start_time`
    |
    = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

warning: unused variable: `token`
   --> src\program_evaluator.rs:768:25
    |
768 |                     let token = 
self.environment.get("X_CAPABILITY_TOKEN")
    |                         ^^^^^ help: if this is 
intentional, prefix it with an underscore: `_token`

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain 
E0308`.
warning: `omnilang` (lib) generated 2 warnings
error: could not compile `omnilang` (lib) due to 2 previous 
errors; 2 warnings emitted
